--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<div class="hero__container container">
 					<div class="hero__content">
 						<div class="hero__logo">
-							<img src="/logo.png" alt="Логотип" />
+							<img src="./logo.png" alt="Логотип" />
 						</div>
 						<h1 class="hero__title h3">
 							СТУДИЯ ЭКСПЕРТНОГО КОНСАЛТИНГА И ПРОЕКТНЫХ РЕШЕНИЙ ЕЛЕНЫ
