make events section

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 	<head>
 		<meta charset="UTF-8" />
@@ -103,6 +103,9 @@
 						</li>
 						<li class="header__menu-item" data-js-header-nav-action>
 							<a href="#links" class="header__menu-link">Ссылки</a>
+						</li>
+						<li class="header__menu-item" data-js-header-nav-action>
+							<a href="#events" class="header__menu-link">Мероприятия</a>
 						</li>
 						<li class="header__menu-item" data-js-header-nav-action>
 							<a href="#footer" class="header__menu-link">Контакты</a>
@@ -624,6 +627,119 @@
 							<img src="/director/sertificate-1.png" alt="Сертификат 1" />
 							<img src="/director/sertificate-2.png" alt="Сертификат 1" />
 						</div>
+					</div>
+				</div>
+			</section>
+			<section class="section events" id="events">
+				<div class="container section__container events__container">
+					<div class="section__titlebox">
+						<h2 class="h2 section__title">Актуальные мероприятия</h2>
+						<p class="section__subtitle">Конкурсы - 2026</p>
+					</div>
+					<div class="events__content">
+						<ul class="list events__list">
+							<li class="list-item events__list-item">
+								<div class="events__textbox">
+									<p class="events__subtitle">
+										II ВСЕРОССИЙСКИЙ КОНКУРС НАУЧНЫХ ЭССЕ «СВОЯ НАУКА». Общая
+										тема эссе «Гражданское общество и правовое государство в
+										России»
+									</p>
+								</div>
+								<a
+									class="link-db"
+									href="https://disk.yandex.ru/i/PFZUzJIZTXleEA"
+									target="_blank"
+								>
+									<button
+										class="button events__button button__transparent"
+										type="button"
+									>
+										Посмотреть
+									</button>
+								</a>
+							</li>
+							<li class="list-item events__list-item">
+								<div class="events__textbox">
+									<p class="events__subtitle">
+										II ВСЕРОССИЙСКИЙ КОНКУРС НА ЛУЧШИЙ УЧЕБНИК, УЧЕБНОЕ ПОСОБИЕ
+										И МОНОГРАФИЮ, изданных в 2024-2025 гг.
+									</p>
+								</div>
+								<a
+									class="link-db"
+									href="https://disk.yandex.ru/i/EI-K-reShN6LeA"
+									target="_blank"
+								>
+									<button
+										class="button events__button button__transparent"
+										type="button"
+									>
+										Посмотреть
+									</button>
+								</a>
+							</li>
+							<li class="list-item events__list-item">
+								<div class="events__textbox">
+									<p class="events__subtitle">
+										II ВСЕРОССИЙСКИЙ КОНКУРС НАУЧНЫХ СТАТЕЙ СТУДЕНТОВ И
+										МАГИСТРАНТОВ «БУДЬ ПЕРВЫМ»
+									</p>
+								</div>
+								<a
+									class="link-db"
+									href="https://disk.yandex.ru/i/XBUBbhFH5LeBkQ"
+									target="_blank"
+								>
+									<button
+										class="button events__button button__transparent"
+										type="button"
+									>
+										Посмотреть
+									</button>
+								</a>
+							</li>
+							<li class="list-item events__list-item">
+								<div class="events__textbox">
+									<p class="events__subtitle">
+										II ВСЕРОССИЙСКИЙ КОНКУРС ДЛЯ ПЕДАГОГОВ «ЛУЧШАЯ МЕТОДИЧЕСКАЯ
+										РАЗРАБОТКА»
+									</p>
+								</div>
+								<a
+									class="link-db"
+									href="https://disk.yandex.ru/i/_eyvmUwEaGtKvA"
+									target="_blank"
+								>
+									<button
+										class="button events__button button__transparent"
+										type="button"
+									>
+										Посмотреть
+									</button>
+								</a>
+							</li>
+							<li class="list-item events__list-item">
+								<div class="events__textbox">
+									<p class="events__subtitle">
+										II ВСЕРОССИЙСКИЙ КОНКУРС «ТЕПЛО НАШИХ СЕРДЕЦ», посвящённый
+										Дню социального работника в России
+									</p>
+								</div>
+								<a
+									class="link-db"
+									href="https://disk.yandex.ru/i/pU9MUwM2DYDQTw"
+									target="_blank"
+								>
+									<button
+										class="button events__button button__transparent"
+										type="button"
+									>
+										Посмотреть
+									</button>
+								</a>
+							</li>
+						</ul>
 					</div>
 				</div>
 			</section>
